# wthrs

./: Cargo.toml
src/: main.rs
src/models/: app.rs  args.rs  event.rs  handler.rs  mod.rs  openmeteo.rs  terminal.rs  tui.rs  ui.rs
