[package]
name = "wthrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.21", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.11.0"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.183", features = ["serde_derive"] }
serde_json = "1.0.104"
